# qt-wayland-decorations-bradient-mkii

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  bradient-mkii.json  bradient.json  main.cpp
.github/workflows/: cmake-single-platform.yml
